[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 346.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 713.0
margin_bottom = 339.0

[node name="ConsoleLabel" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 706.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 350.0
margin_right = 720.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 30 )
alignment = 2

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 358.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 720.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Load"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
